<resources>
    <string name="app_name">Lines</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="login">Lines-Login</string>
    <string name="Username">Username</string>
    <string name="Password">Userpassword</string>
    <string name="go">Go</string>
    <string name="forgot_your_password">forgot your password</string>
    <string name="register">Lines-Register</string>
    <string name="repeat_password">Repeatpassword</string>
    <string name="next">Next</string>
    <string name="picturechoose">头像选择</string>
    <string name="choose">选择</string>


    <string name="zhihu">知乎日报</string>
    <string name="wechat">微信精选</string>
    <string name="gank">干货集中营</string>
    <string name="drawer_about">关于</string>
    <string name="drawer_collection">收藏</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_group_content">资讯</string>
    <string name="drawer_group_options">选项</string>
    <string name="drawer_toggle">切换</string>
    <string name="date_picker">日期选择</string>

    <string name="detail_bottom_share">分享</string>
    <string name="detail_bottom_like">点赞</string>
    <string name="detail_bottom_commit">评论</string>
    <string name="comment_expand">收起</string>

    <string name="action_copy">复制链接到剪贴板</string>
    <string name="action_save">保存到本地</string>
    <string name="action_share">分享链接</string>
    <string name="action_like">收藏</string>
    <string name="action_search">搜索</string>

    <string name="setting_cache">自动缓存</string>
    <string name="setting_image">无图模式</string>
    <string name="setting_night">夜间模式</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_clear">清除缓存</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_normal">常规</string>
    <string name="setting_other">其他</string>

    <string name="about_addr">项目地址:\nhttps://github.com/codeestX/GeekNews</string>
    <string name="about_author">作者:Est\t\t(codeest.dev@gmail.com)</string>
    <string name="about_project">项目简介:\n极客日报,一个纯粹的阅读App\n为了熟悉当前Android端主流框架的使用,也为了能有一款将新闻、技术文章、福利一网打尽的简洁的阅读应用,利用闲暇时间做了这个项目n(*≧▽≦*)n\n
        本着学习的目的,该项目会持续迭代与优化,加入更丰富的阅读内容与功能,并不断尝试最新的技术,欢迎star、fork、issue、email</string>
    <string name="about_info">GeekNews\t\t\tV1.0.1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="color_palette">颜色</string>
    <string name="colors">颜色深度</string>
    <string name="custom">定制</string>
    <string name="cancel">取消</string>
    <string name="preset">之前</string>
    <string name="done">确定</string>
    <string name="back">返回</string>
</resources>