<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/rl_root"
    android:background="@mipmap/log_bg"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:layout_width="320dp"
        android:layout_height="430dp"
        android:layout_centerInParent="true"
        android:paddingTop="70dp">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_add"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="#2ea67f"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/register"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    style="@style/linearLayout">

                    <android.support.design.widget.TextInputLayout
                        android:textColorHint="#f0f7f4"
                        style="@style/textInput">

                        <EditText
                            android:id="@+id/et_username"
                            style="@style/edit"
                            android:background="@drawable/selector_bg_edit_2"
                            android:hint="@string/Username"
                            android:inputType="textPersonName"
                            android:textColor="#f0f7f4"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                             />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    style="@style/linearLayout">

                    <android.support.design.widget.TextInputLayout
                        android:textColorHint="#f0f7f4"
                        style="@style/textInput">

                        <EditText
                            android:id="@+id/et_password"
                            style="@style/edit"
                            android:background="@drawable/selector_bg_edit_2"
                            android:hint="@string/Password"
                            android:inputType="textPassword"
                            android:textColor="#f0f7f4"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    style="@style/linearLayout">

                    <android.support.design.widget.TextInputLayout
                        android:textColorHint="#f0f7f4"
                        style="@style/textInput">

                        <EditText
                            android:id="@+id/et_repeatpassword"
                            style="@style/edit"
                            android:background="@drawable/selector_bg_edit_2"
                            android:hint="@string/repeat_password"
                            android:inputType="textPassword"
                            android:textColor="#f0f7f4"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                           />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/bt_go"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bt_shape_2"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/next"
                    android:textColor="#2fa881"></Button>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:src="@mipmap/plus_x"
            android:transitionName="loginFab"
            app:fabSize="normal" />
    </FrameLayout>

</RelativeLayout>
