<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_setting"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:minHeight="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:orientation="vertical"
                android:fitsSystemWindows="true"
                android:background="@color/colorBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@color/colorText"
                    android:text="@string/setting_normal"/>

                <android.support.v7.widget.CardView
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="2dp"
                    app:cardBackgroundColor="@color/colorCard"
                    app:cardCornerRadius="3dp"
                    android:background="#fff"
                    >
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:orientation="horizontal"
                            android:padding="12dp"
                            android:gravity="center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/ic_cache"/>
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:textColor="@color/colorText"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:text="@string/setting_cache"/>

                            <android.support.v7.widget.SwitchCompat
                                android:id="@+id/sc_cache"
                                android:checked="true"
                                android:buttonTint="@color/colorAccent"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>
                        <include layout="@layout/view_line_05"/>
                        <LinearLayout
                            android:orientation="horizontal"
                            android:padding="12dp"
                            android:gravity="center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/ic_image"/>
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:textColor="@color/colorText"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:text="@string/setting_image"/>

                            <android.support.v7.widget.SwitchCompat
                                android:id="@+id/sc_setting_image"
                                android:buttonTint="@color/colorAccent"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <include layout="@layout/view_line_05"/>
                        <LinearLayout
                            android:orientation="horizontal"
                            android:padding="12dp"
                            android:gravity="center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/ic_night"/>
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:textColor="@color/colorText"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:text="@string/setting_night"/>

                            <android.support.v7.widget.SwitchCompat
                                android:id="@+id/sc_setting_night"
                                android:buttonTint="@color/colorAccent"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@color/colorText"
                    android:text="@string/setting_other"/>

                <android.support.v7.widget.CardView
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="2dp"
                    app:cardCornerRadius="3dp"
                    app:cardBackgroundColor="@color/colorCard">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:id="@+id/ll_setting_feedback"
                            android:orientation="horizontal"
                            android:padding="12dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:gravity="center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/ic_feedback"/>
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:textColor="@color/colorText"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:text="@string/setting_feedback"/>
                        </LinearLayout>
                        <include layout="@layout/view_line_05"/>
                        <LinearLayout
                            android:id="@+id/ll_setting_clear"
                            android:orientation="horizontal"
                            android:padding="12dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:gravity="center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/ic_clear"/>
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:textColor="@color/colorText"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:text="@string/setting_clear"/>
                            <TextView
                                android:id="@+id/tv_setting_clear"
                                android:text="缓存大小：200kb"
                                android:textColor="@color/colorText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <include layout="@layout/view_line_05"/>
                        <LinearLayout
                            android:id="@+id/ll_setting_update"
                            android:orientation="horizontal"
                            android:padding="12dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:gravity="center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/ic_update"/>
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:textColor="@color/colorText"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:text="@string/setting_update"/>
                            <TextView
                                android:id="@+id/tv_setting_update"
                                android:text="当前版本号：v1.0"
                                android:textColor="@color/colorText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>




</android.support.design.widget.CoordinatorLayout>