<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_image_height"
        android:fitsSystemWindows="true"
        android:layout_marginTop="-15dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:transitionName="shareView">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/clp_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="10dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/detail_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="@drawable/bottom_black_bg" />

            <TextView
                android:id="@+id/detail_bar_copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginBottom="3dp"
                android:padding="6dp"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/view_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsv_scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <WebView
                android:id="@+id/wv_detail_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:isScrollContainer="false"
                android:overScrollMode="never"
                android:scrollbars="vertical" />

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/view_loading"
                style="@style/AVLoadingIndicatorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:indicatorColor="@color/colorPrimary"
                app:indicatorName="BallTrianglePathIndicator" />
        </FrameLayout>
    </android.support.v4.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/ll_detail_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_bottom_height"
        android:layout_gravity="bottom"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="6dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/tv_detail_bottom_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="3dp"
                android:drawableTop="@mipmap/ic_daily_like"
                android:text="@string/detail_bottom_like"
                android:textColor="@color/bottom_text" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="3" />

            <TextView
                android:id="@+id/tv_detail_bottom_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="3dp"
                android:drawableTop="@mipmap/ic_daily_comment"
                android:text="@string/detail_bottom_commit"
                android:textColor="@color/bottom_text" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="3" />

            <TextView
                android:id="@+id/tv_detail_bottom_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="3dp"
                android:drawableTop="@mipmap/ic_daily_share"
                android:text="@string/detail_bottom_share"
                android:textColor="@color/bottom_text" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="2" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="top"
            android:background="#e8e8e8" />
    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/selector_like"
        app:elevation="6dp"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:pressedTranslationZ="12dp" />
</android.support.design.widget.CoordinatorLayout>